updated week2 assignments

--- a/week2/Assignment/Assignment-Week2.ipynb
+++ b/week2/Assignment/Assignment-Week2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "theoretical-florist",
+   "id": "middle-advisory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "clean-premiere",
+   "id": "destroyed-tuition",
    "metadata": {
     "tags": []
    },
@@ -66,7 +66,7 @@
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>3 hours 37 mins</td></tr>\n",
+       "<td>3 mins 52 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Berlin</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
@@ -74,13 +74,13 @@
        "<tr><td>H2O_cluster_version:</td>\n",
        "<td>3.32.1.1</td></tr>\n",
        "<tr><td>H2O_cluster_version_age:</td>\n",
-       "<td>1 month and 28 days </td></tr>\n",
+       "<td>2 months and 5 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>H2O_from_python_Gerd_mpc823</td></tr>\n",
+       "<td>H2O_from_python_Gerd_1iryoa</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>3.969 Gb</td></tr>\n",
+       "<td>3.930 Gb</td></tr>\n",
        "<tr><td>H2O_cluster_total_cores:</td>\n",
        "<td>16</td></tr>\n",
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
@@ -100,14 +100,14 @@
       ],
       "text/plain": [
        "--------------------------  ---------------------------------------------------------\n",
-       "H2O_cluster_uptime:         3 hours 37 mins\n",
+       "H2O_cluster_uptime:         3 mins 52 secs\n",
        "H2O_cluster_timezone:       Europe/Berlin\n",
        "H2O_data_parsing_timezone:  UTC\n",
        "H2O_cluster_version:        3.32.1.1\n",
-       "H2O_cluster_version_age:    1 month and 28 days\n",
-       "H2O_cluster_name:           H2O_from_python_Gerd_mpc823\n",
+       "H2O_cluster_version_age:    2 months and 5 days\n",
+       "H2O_cluster_name:           H2O_from_python_Gerd_1iryoa\n",
        "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    3.969 Gb\n",
+       "H2O_cluster_free_memory:    3.930 Gb\n",
        "H2O_cluster_total_cores:    16\n",
        "H2O_cluster_allowed_cores:  16\n",
        "H2O_cluster_status:         locked, healthy\n",
@@ -145,22 +145,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "amazing-portrait",
+   "execution_count": 10,
+   "id": "undefined-rental",
    "metadata": {},
    "outputs": [],
    "source": [
     "#\n",
     "# STEP 3 - Split the data. Split into train and test (for Crossvalidation).\n",
     "#\n",
-    "\n",
-    "train, test = dataframe.split_frame(ratios=[0.8], destination_frames=[\"train\", \"test\"], seed=123)\n"
+    "train, valid, test = dataframe.split_frame(ratios=[0.7, 0.15], destination_frames=[\"train\", \"valid\", \"test\"], seed=123)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "geological-matthew",
+   "execution_count": 11,
+   "id": "classified-external",
    "metadata": {},
    "outputs": [
     {
@@ -168,27 +167,27 @@
      "output_type": "stream",
      "text": [
       "gbm Model Build progress: |███████████████████████████████████████████████| 100%\n",
+      "Performance on trainingdata: \n",
+      " \n",
+      "ModelMetricsRegression: gbm\n",
+      "** Reported on train data. **\n",
+      "\n",
+      "MSE: 49545.926577150654\n",
+      "RMSE: 222.58914299028748\n",
+      "MAE: 159.8847861900612\n",
+      "RMSLE: 0.0047264250421561686\n",
+      "Mean Residual Deviance: 49545.926577150654\n",
+      "\n",
       "Performance on testdata: \n",
       " \n",
       "ModelMetricsRegression: gbm\n",
       "** Reported on test data. **\n",
       "\n",
-      "MSE: 79480.17397775457\n",
-      "RMSE: 281.9222835778587\n",
-      "MAE: 201.41323693016932\n",
-      "RMSLE: 0.006198023640633325\n",
-      "Mean Residual Deviance: 79480.17397775457\n",
-      "\n",
-      "Performance on trainingdata: \n",
-      " \n",
-      "ModelMetricsRegression: gbm\n",
-      "** Reported on test data. **\n",
-      "\n",
-      "MSE: 47025.55971366976\n",
-      "RMSE: 216.85377495831094\n",
-      "MAE: 157.24448661343834\n",
-      "RMSLE: 0.004761168440103185\n",
-      "Mean Residual Deviance: 47025.55971366976\n",
+      "MSE: 93367.17421893052\n",
+      "RMSE: 305.5604264608402\n",
+      "MAE: 210.75052475739722\n",
+      "RMSLE: 0.005855889369266057\n",
+      "Mean Residual Deviance: 93367.17421893052\n",
       "\n"
      ]
     }
@@ -210,13 +209,14 @@
     "# using cross validation\n",
     "#\n",
     "gbm_model_1 = H2OGradientBoostingEstimator(model_id = \"gbm-coursera\", ntrees=60, nfolds=5, max_depth=5, learn_rate=0.2)\n",
-    "gbm_model_1.train(input_variables, target_variable, train)\n",
+    "gbm_model_1.train(input_variables, target_variable, train, validation_frame=valid)\n",
     "\n",
     "#\n",
     "# showing model performance\n",
     "#\n",
+    "print(\"Performance on trainingdata: \\n\",gbm_model_1.model_performance(train = True))\n",
     "print(\"Performance on testdata: \\n\", gbm_model_1.model_performance(test))\n",
-    "print(\"Performance on trainingdata: \\n\",gbm_model_1.model_performance(train))\n",
+    "\n",
     "\n",
     "#\n",
     "# storing the scoring results of model 1 for comparison\n",
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "administrative-extreme",
+   "execution_count": 18,
+   "id": "ahead-programming",
    "metadata": {},
    "outputs": [
     {
@@ -236,27 +236,27 @@
      "output_type": "stream",
      "text": [
       "gbm Model Build progress: |███████████████████████████████████████████████| 100%\n",
+      "Performance on trainingdata: \n",
+      " \n",
+      "ModelMetricsRegression: gbm\n",
+      "** Reported on train data. **\n",
+      "\n",
+      "MSE: 21572.427764486576\n",
+      "RMSE: 146.87555196317246\n",
+      "MAE: 98.75962889513374\n",
+      "RMSLE: 0.0028011606277724456\n",
+      "Mean Residual Deviance: 21572.427764486576\n",
+      "\n",
       "Performance on testdata: \n",
       " \n",
       "ModelMetricsRegression: gbm\n",
       "** Reported on test data. **\n",
       "\n",
-      "MSE: 40752.463626682904\n",
-      "RMSE: 201.87239441459772\n",
-      "MAE: 131.96896280739773\n",
-      "RMSLE: 0.004217003296384585\n",
-      "Mean Residual Deviance: 40752.463626682904\n",
-      "\n",
-      "Performance on trainingdata: \n",
-      " \n",
-      "ModelMetricsRegression: gbm\n",
-      "** Reported on test data. **\n",
-      "\n",
-      "MSE: 17985.186729576875\n",
-      "RMSE: 134.10886148788555\n",
-      "MAE: 93.9869185063788\n",
-      "RMSLE: 0.002893957903522658\n",
-      "Mean Residual Deviance: 17985.186729576875\n",
+      "MSE: 59969.52895731758\n",
+      "RMSE: 244.88676762397264\n",
+      "MAE: 153.31646581848153\n",
+      "RMSLE: 0.0041573633675309465\n",
+      "Mean Residual Deviance: 59969.52895731758\n",
       "\n"
      ]
     }
@@ -274,13 +274,17 @@
     "# Should give better results than the first model!\n",
     "#\n",
     "gbm_model_2 = H2OGradientBoostingEstimator(model_id = \"gbm-coursera-tweaked-params\", ntrees=80, nfolds=5, max_depth=6, learn_rate = 0.1)\n",
-    "gbm_model_2.train(input_variables, target_variable, train)\n",
+    "'''\n",
+    "#overfitting the model: \n",
+    "gbm_model_2 = H2OGradientBoostingEstimator(model_id = \"gbm-coursera-tweaked-params\", ntrees=500, nfolds=10, max_depth=10)\n",
+    "'''\n",
+    "gbm_model_2.train(input_variables, target_variable, train, validation_frame = valid)\n",
     "\n",
     "#\n",
     "# showing model performance\n",
     "#\n",
+    "print(\"Performance on trainingdata: \\n\",gbm_model_2.model_performance(train = True))\n",
     "print(\"Performance on testdata: \\n\", gbm_model_2.model_performance(test))\n",
-    "print(\"Performance on trainingdata: \\n\",gbm_model_2.model_performance(train))\n",
     "\n",
     "#\n",
     "# storing the scoring results of model 2 for comparison\n",
@@ -291,8 +295,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "liquid-metro",
+   "execution_count": 19,
+   "id": "vulnerable-wellington",
    "metadata": {},
    "outputs": [
     {
@@ -301,11 +305,11 @@
      "text": [
       "RESULT COMPARISON:\n",
       "\n",
-      "RMSE Model 1: 299.07816050028225 \n",
-      " MAE Model 1: 208.76301456022514 \n",
+      "RMSE Model 1: 317.4700251342619 \n",
+      " MAE Model 1: 219.35886811939392 \n",
       " \n",
-      "RMSE Model 2 (Tweaked Parameters): 215.35022500251927 \n",
-      " MAE Model 2 (Tweaked Parameters): 145.36858048765177\n"
+      "RMSE Model 2 (Tweaked Parameters): 249.05770583214428 \n",
+      " MAE Model 2 (Tweaked Parameters): 157.49388722839504\n"
      ]
     }
    ],
@@ -321,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adjustable-hotel",
+   "id": "sustained-multiple",
    "metadata": {},
    "outputs": [],
    "source": []
