--- a/week3/data-exploration-glm.ipynb
+++ b/week3/data-exploration-glm.ipynb
@@ -3,21 +3,35 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "scheduled-algebra",
-   "metadata": {},
+   "id": "variable-index",
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking whether there is an H2O instance running at http://localhost:54321 . connected.\n"
+      "Checking whether there is an H2O instance running at http://localhost:54321 ..... not found.\n",
+      "Attempting to start a local H2O server...\n",
+      "; Java HotSpot(TM) 64-Bit Server VM 18.9 (build 11.0.11+9-LTS-194, mixed mode)\n",
+      "  Starting server from C:\\Users\\Gerd\\venvs\\h2o\\Lib\\site-packages\\h2o\\backend\\bin\\h2o.jar\n",
+      "  Ice root: C:\\Users\\Gerd\\AppData\\Local\\Temp\\tmp7hrsp5rd\n",
+      "  JVM stdout: C:\\Users\\Gerd\\AppData\\Local\\Temp\\tmp7hrsp5rd\\h2o_Gerd_started_from_python.out\n",
+      "  JVM stderr: C:\\Users\\Gerd\\AppData\\Local\\Temp\\tmp7hrsp5rd\\h2o_Gerd_started_from_python.err\n",
+      "  Server is running at http://127.0.0.1:54321\n",
+      "Connecting to H2O server at http://127.0.0.1:54321 ... successful.\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>1 hour 37 mins</td></tr>\n",
+       "<td>01 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Berlin</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
@@ -27,7 +41,7 @@
        "<tr><td>H2O_cluster_version_age:</td>\n",
        "<td>2 months and 10 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>H2O_from_python_Gerd_zsswgf</td></tr>\n",
+       "<td>H2O_from_python_Gerd_m7rb5p</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
@@ -37,9 +51,9 @@
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
        "<td>16</td></tr>\n",
        "<tr><td>H2O_cluster_status:</td>\n",
-       "<td>locked, healthy</td></tr>\n",
+       "<td>accepting new members, healthy</td></tr>\n",
        "<tr><td>H2O_connection_url:</td>\n",
-       "<td>http://localhost:54321</td></tr>\n",
+       "<td>http://127.0.0.1:54321</td></tr>\n",
        "<tr><td>H2O_connection_proxy:</td>\n",
        "<td>{\"http\": null, \"https\": null}</td></tr>\n",
        "<tr><td>H2O_internal_security:</td>\n",
@@ -51,18 +65,18 @@
       ],
       "text/plain": [
        "--------------------------  ---------------------------------------------------------\n",
-       "H2O_cluster_uptime:         1 hour 37 mins\n",
+       "H2O_cluster_uptime:         01 secs\n",
        "H2O_cluster_timezone:       Europe/Berlin\n",
        "H2O_data_parsing_timezone:  UTC\n",
        "H2O_cluster_version:        3.32.1.1\n",
        "H2O_cluster_version_age:    2 months and 10 days\n",
-       "H2O_cluster_name:           H2O_from_python_Gerd_zsswgf\n",
+       "H2O_cluster_name:           H2O_from_python_Gerd_m7rb5p\n",
        "H2O_cluster_total_nodes:    1\n",
        "H2O_cluster_free_memory:    3.975 Gb\n",
        "H2O_cluster_total_cores:    16\n",
        "H2O_cluster_allowed_cores:  16\n",
-       "H2O_cluster_status:         locked, healthy\n",
-       "H2O_connection_url:         http://localhost:54321\n",
+       "H2O_cluster_status:         accepting new members, healthy\n",
+       "H2O_connection_url:         http://127.0.0.1:54321\n",
        "H2O_connection_proxy:       {\"http\": null, \"https\": null}\n",
        "H2O_internal_security:      False\n",
        "H2O_API_Extensions:         Amazon S3, Algos, AutoML, Core V3, TargetEncoder, Core V4\n",
@@ -87,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "protected-bumper",
+   "id": "circular-reward",
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "immune-sessions",
+   "id": "contained-working",
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "anticipated-tension",
+   "id": "recovered-storage",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "helpful-keyboard",
+   "id": "delayed-sperm",
    "metadata": {
     "tags": []
    },
@@ -186,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "generous-poetry",
+   "id": "arbitrary-revelation",
    "metadata": {
     "tags": []
    },
@@ -578,7 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "public-interstate",
+   "id": "signed-resort",
    "metadata": {},
    "outputs": [
     {
@@ -599,7 +613,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "great-consortium",
+   "id": "artificial-appearance",
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "second-amplifier",
+   "id": "coupled-episode",
    "metadata": {},
    "outputs": [],
    "source": [
