--- a/week3/selfstudy.ipynb
+++ b/week3/selfstudy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "statewide-copper",
+   "id": "injured-connecticut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,13 +19,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "irish-serbia",
+   "execution_count": 2,
+   "id": "secure-prescription",
    "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    },
     "tags": []
    },
    "outputs": [
@@ -40,7 +36,7 @@
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>3 hours 20 mins</td></tr>\n",
+       "<td>21 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Berlin</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
@@ -50,11 +46,11 @@
        "<tr><td>H2O_cluster_version_age:</td>\n",
        "<td>2 months and 10 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>H2O_from_python_Gerd_zsswgf</td></tr>\n",
+       "<td>H2O_from_python_Gerd_m7rb5p</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>3.971 Gb</td></tr>\n",
+       "<td>3.975 Gb</td></tr>\n",
        "<tr><td>H2O_cluster_total_cores:</td>\n",
        "<td>16</td></tr>\n",
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
@@ -74,14 +70,14 @@
       ],
       "text/plain": [
        "--------------------------  ---------------------------------------------------------\n",
-       "H2O_cluster_uptime:         3 hours 20 mins\n",
+       "H2O_cluster_uptime:         21 secs\n",
        "H2O_cluster_timezone:       Europe/Berlin\n",
        "H2O_data_parsing_timezone:  UTC\n",
        "H2O_cluster_version:        3.32.1.1\n",
        "H2O_cluster_version_age:    2 months and 10 days\n",
-       "H2O_cluster_name:           H2O_from_python_Gerd_zsswgf\n",
+       "H2O_cluster_name:           H2O_from_python_Gerd_m7rb5p\n",
        "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    3.971 Gb\n",
+       "H2O_cluster_free_memory:    3.975 Gb\n",
        "H2O_cluster_total_cores:    16\n",
        "H2O_cluster_allowed_cores:  16\n",
        "H2O_cluster_status:         locked, healthy\n",
@@ -104,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dying-maple",
+   "id": "olive-taxation",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "varied-meter",
+   "id": "accessory-landscape",
    "metadata": {
     "tags": []
    },
@@ -392,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "excessive-throw",
+   "id": "received-circular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +399,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "leading-process",
+   "id": "boring-princeton",
    "metadata": {},
    "outputs": [],
    "source": []
