--- a/week5/autoencoders.ipynb
+++ b/week5/autoencoders.ipynb
@@ -2,6 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "98648a19-3207-4917-87f1-538d54e39e92",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "# Feature Reduction in h2o (autoencoders)\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 68,
    "id": "alone-sleeve",
    "metadata": {},
