added glrm notebook

--- a/week5/principle-component-analysis.ipynb
+++ b/week5/principle-component-analysis.ipynb
@@ -1,15 +1,13 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3077bc1c-08ac-4a27-9bf5-50fc7ceda813",
+   "cell_type": "markdown",
+   "id": "abce18d3-a8ae-4a08-aadc-22826f7d1d27",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#\n",
-    "# how to use PCA for feature reduction\n",
-    "#"
+    "<h4>pca intuition:</h4>\n",
+    "<p>https://www.youtube.com/watch?v=BfTMmoDFXyE</p>\n",
+    "<p>https://stats.stackexchange.com/questions/2691/making-sense-of-principal-component-analysis-eigenvectors-eigenvalues</p>"
    ]
   },
   {
