added data repair notebook

--- a/week5/autoencoders.ipynb
+++ b/week5/autoencoders.ipynb
@@ -31,6 +31,10 @@
    "execution_count": 69,
    "id": "governmental-reservoir",
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
