--- a/week5/kmeans.ipynb
+++ b/week5/kmeans.ipynb
@@ -6,12 +6,13 @@
    "metadata": {},
    "source": [
     "**k means clustering**\n",
-    "<h5>https://docs.h2o.ai/h2o/latest-stable/h2o-docs/data-science/k-means.html?highlight=means</h5>"
+    "<p>https://docs.h2o.ai/h2o/latest-stable/h2o-docs/data-science/k-means.html?highlight=means</p>\n",
+    "<p>https://en.wikipedia.org/wiki/Curse_of_dimensionality</p>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "afdbf638-97bb-476c-b032-a3828d891c63",
    "metadata": {
     "collapsed": true,
@@ -25,14 +26,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Checking whether there is an H2O instance running at http://localhost:54321 . connected.\n"
+      "Checking whether there is an H2O instance running at http://localhost:54321 ..... not found.\n",
+      "Attempting to start a local H2O server...\n",
+      "  Java Version: openjdk version \"11.0.11\" 2021-04-20; OpenJDK Runtime Environment (build 11.0.11+9-Ubuntu-0ubuntu2.20.04); OpenJDK 64-Bit Server VM (build 11.0.11+9-Ubuntu-0ubuntu2.20.04, mixed mode, sharing)\n",
+      "  Starting server from /home/gerd/Documents/Python/venvs/h2o/lib/python3.8/site-packages/h2o/backend/bin/h2o.jar\n",
+      "  Ice root: /tmp/tmpia7m08vf\n",
+      "  JVM stdout: /tmp/tmpia7m08vf/h2o_gerd_started_from_python.out\n",
+      "  JVM stderr: /tmp/tmpia7m08vf/h2o_gerd_started_from_python.err\n",
+      "  Server is running at http://127.0.0.1:54321\n",
+      "Connecting to H2O server at http://127.0.0.1:54321 ... successful.\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>53 mins 52 secs</td></tr>\n",
+       "<td>01 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Vienna</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
@@ -42,7 +51,7 @@
        "<tr><td>H2O_cluster_version_age:</td>\n",
        "<td>2 months and 18 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>H2O_from_python_gerd_qol108</td></tr>\n",
+       "<td>H2O_from_python_gerd_er2izt</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
@@ -52,9 +61,9 @@
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
        "<td>8</td></tr>\n",
        "<tr><td>H2O_cluster_status:</td>\n",
-       "<td>locked, healthy</td></tr>\n",
+       "<td>accepting new members, healthy</td></tr>\n",
        "<tr><td>H2O_connection_url:</td>\n",
-       "<td>http://localhost:54321</td></tr>\n",
+       "<td>http://127.0.0.1:54321</td></tr>\n",
        "<tr><td>H2O_connection_proxy:</td>\n",
        "<td>{\"http\": null, \"https\": null}</td></tr>\n",
        "<tr><td>H2O_internal_security:</td>\n",
@@ -66,18 +75,18 @@
       ],
       "text/plain": [
        "--------------------------  ------------------------------------------------------------------\n",
-       "H2O_cluster_uptime:         53 mins 52 secs\n",
+       "H2O_cluster_uptime:         01 secs\n",
        "H2O_cluster_timezone:       Europe/Vienna\n",
        "H2O_data_parsing_timezone:  UTC\n",
        "H2O_cluster_version:        3.32.1.2\n",
        "H2O_cluster_version_age:    2 months and 18 days\n",
-       "H2O_cluster_name:           H2O_from_python_gerd_qol108\n",
+       "H2O_cluster_name:           H2O_from_python_gerd_er2izt\n",
        "H2O_cluster_total_nodes:    1\n",
        "H2O_cluster_free_memory:    2.867 Gb\n",
        "H2O_cluster_total_cores:    8\n",
        "H2O_cluster_allowed_cores:  8\n",
-       "H2O_cluster_status:         locked, healthy\n",
-       "H2O_connection_url:         http://localhost:54321\n",
+       "H2O_cluster_status:         accepting new members, healthy\n",
+       "H2O_connection_url:         http://127.0.0.1:54321\n",
        "H2O_connection_proxy:       {\"http\": null, \"https\": null}\n",
        "H2O_internal_security:      False\n",
        "H2O_API_Extensions:         Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4\n",
@@ -98,9 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "36b1baa8-14d4-425a-a53b-3dddd5fd97a2",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -121,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "id": "9cb8ff0e-56ed-426b-a712-6c4453a6f775",
    "metadata": {},
    "outputs": [
@@ -131,7 +142,7 @@
        "['sepal_len', 'sepal_wid', 'petal_len', 'petal_wid', 'class']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "2c581dcd-f7ef-4538-b3e9-642b4c0c6ad2",
    "metadata": {},
    "outputs": [
@@ -155,13 +166,13 @@
     }
    ],
    "source": [
-    "km = H2OKMeansEstimator(k=3)\n",
+    "km = H2OKMeansEstimator(k=2)\n",
     "km.train(x=train.columns, training_frame=train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "aee1c5b9-5df1-4450-8371-bc446f3fb578",
    "metadata": {},
    "outputs": [
@@ -172,7 +183,7 @@
       "Model Details\n",
       "=============\n",
       "H2OKMeansEstimator :  K-means\n",
-      "Model Key:  KMeans_model_python_1626605085146_2\n",
+      "Model Key:  KMeans_model_python_1626611505366_2\n",
       "\n",
       "\n",
       "Model Summary: \n"
@@ -214,12 +225,12 @@
        "      <th>0</th>\n",
        "      <td></td>\n",
        "      <td>122.0</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>130.973562</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>223.27151</td>\n",
        "      <td>565.0</td>\n",
-       "      <td>434.026438</td>\n",
+       "      <td>341.72849</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -227,13 +238,13 @@
       ],
       "text/plain": [
        "     number_of_rows  number_of_clusters  number_of_categorical_columns  \\\n",
-       "0             122.0                 3.0                            1.0   \n",
+       "0             122.0                 2.0                            1.0   \n",
        "\n",
        "   number_of_iterations  within_cluster_sum_of_squares  total_sum_of_squares  \\\n",
-       "0                  10.0                     130.973562                 565.0   \n",
+       "0                   3.0                      223.27151                 565.0   \n",
        "\n",
        "   between_cluster_sum_of_squares  \n",
-       "0                      434.026438  "
+       "0                       341.72849  "
       ]
      },
      "metadata": {},
@@ -250,9 +261,9 @@
       "\n",
       "MSE: NaN\n",
       "RMSE: NaN\n",
-      "Total Within Cluster Sum of Square Error: 130.9735620454526\n",
+      "Total Within Cluster Sum of Square Error: 223.27150983624387\n",
       "Total Sum of Square Error to Grand Mean: 565.0000036771889\n",
-      "Between Cluster Sum of Square Error: 434.02644163173636\n",
+      "Between Cluster Sum of Square Error: 341.7284938409451\n",
       "\n",
       "Centroid Statistics: \n"
      ]
@@ -289,22 +300,15 @@
        "      <th>0</th>\n",
        "      <td></td>\n",
        "      <td>1.0</td>\n",
-       "      <td>41.0</td>\n",
-       "      <td>41.248926</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>177.25296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td></td>\n",
        "      <td>2.0</td>\n",
        "      <td>41.0</td>\n",
-       "      <td>46.018550</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td></td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>43.706086</td>\n",
+       "      <td>46.01855</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -312,9 +316,8 @@
       ],
       "text/plain": [
        "     centroid  size  within_cluster_sum_of_squares\n",
-       "0         1.0  41.0                      41.248926\n",
-       "1         2.0  41.0                      46.018550\n",
-       "2         3.0  40.0                      43.706086"
+       "0         1.0  81.0                      177.25296\n",
+       "1         2.0  41.0                       46.01855"
       ]
      },
      "metadata": {},
@@ -361,8 +364,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.003 sec</td>\n",
+       "      <td>2021-07-18 14:32:07</td>\n",
+       "      <td>0.004 sec</td>\n",
        "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -370,123 +373,46 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.015 sec</td>\n",
+       "      <td>2021-07-18 14:32:07</td>\n",
+       "      <td>0.012 sec</td>\n",
        "      <td>1.0</td>\n",
        "      <td>122.0</td>\n",
-       "      <td>343.173035</td>\n",
+       "      <td>501.507544</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.018 sec</td>\n",
+       "      <td>2021-07-18 14:32:07</td>\n",
+       "      <td>0.014 sec</td>\n",
        "      <td>2.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>148.493382</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>231.743396</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.020 sec</td>\n",
+       "      <td>2021-07-18 14:32:07</td>\n",
+       "      <td>0.015 sec</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>134.548661</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.023 sec</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>132.748773</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.025 sec</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>131.670955</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.027 sec</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>131.378719</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.028 sec</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>131.287053</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.030 sec</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>131.226612</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.033 sec</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>131.054239</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td></td>\n",
-       "      <td>2021-07-18 13:13:59</td>\n",
-       "      <td>0.035 sec</td>\n",
-       "      <td>10.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>130.973562</td>\n",
+       "      <td>223.271510</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                timestamp    duration  iterations  \\\n",
-       "0     2021-07-18 13:13:59   0.003 sec         0.0   \n",
-       "1     2021-07-18 13:13:59   0.015 sec         1.0   \n",
-       "2     2021-07-18 13:13:59   0.018 sec         2.0   \n",
-       "3     2021-07-18 13:13:59   0.020 sec         3.0   \n",
-       "4     2021-07-18 13:13:59   0.023 sec         4.0   \n",
-       "5     2021-07-18 13:13:59   0.025 sec         5.0   \n",
-       "6     2021-07-18 13:13:59   0.027 sec         6.0   \n",
-       "7     2021-07-18 13:13:59   0.028 sec         7.0   \n",
-       "8     2021-07-18 13:13:59   0.030 sec         8.0   \n",
-       "9     2021-07-18 13:13:59   0.033 sec         9.0   \n",
-       "10    2021-07-18 13:13:59   0.035 sec        10.0   \n",
+       "               timestamp    duration  iterations  \\\n",
+       "0    2021-07-18 14:32:07   0.004 sec         0.0   \n",
+       "1    2021-07-18 14:32:07   0.012 sec         1.0   \n",
+       "2    2021-07-18 14:32:07   0.014 sec         2.0   \n",
+       "3    2021-07-18 14:32:07   0.015 sec         3.0   \n",
        "\n",
-       "    number_of_reassigned_observations  within_cluster_sum_of_squares  \n",
-       "0                                 NaN                            NaN  \n",
-       "1                               122.0                     343.173035  \n",
-       "2                                17.0                     148.493382  \n",
-       "3                                 4.0                     134.548661  \n",
-       "4                                 4.0                     132.748773  \n",
-       "5                                 2.0                     131.670955  \n",
-       "6                                 1.0                     131.378719  \n",
-       "7                                 1.0                     131.287053  \n",
-       "8                                 1.0                     131.226612  \n",
-       "9                                 1.0                     131.054239  \n",
-       "10                                0.0                     130.973562  "
+       "   number_of_reassigned_observations  within_cluster_sum_of_squares  \n",
+       "0                                NaN                            NaN  \n",
+       "1                              122.0                     501.507544  \n",
+       "2                                7.0                     231.743396  \n",
+       "3                                0.0                     223.271510  "
       ]
      },
      "metadata": {},
@@ -496,7 +422,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
